--- a/aplicacion_basica/css/style.css
+++ b/aplicacion_basica/css/style.css
@@ -73,3 +73,12 @@
 	-moz-box-shadow: inset -1px 3px 29px 15px rgba(181,72,181,0.44);
 	box-shadow: inset -1px 3px 29px 15px rgba(181,72,181,0.44);
 }
+
+.input-group.md-form.form-sm.form-2 input.green-border {
+	border: 1px solid #3BA877;
+}
+.input-group-text.green{
+	background-color: #3BA877;
+	color: #fff;
+	border: 1px solid #3BA877;
+}
